# gct_samples

./: .gitmodules  CMakeLists.txt
cmake/: AddShader.cmake
shaders/: compile.sh  sampler.comp  simple.vert
src/: CMakeLists.txt
src/00_create_buffer/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/00_create_image/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/00_create_image_without_vma/: vulkan.cpp  vulkan_hpp.cpp
src/01_get_instance/: vulkan_hpp.cpp
src/02_list_devices/: gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/02_list_devices11/: CMakeLists.txt  vulkan.cpp  vulkan_hpp.cpp
src/04_create_surface/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/05_create_swapchain/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/06_create_shader_module/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/07_descriptor_set/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/08_compute_pipeline/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/09_copy_buffer/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/10_dispatch/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/110_gauss_dof/: CMakeLists.txt  dof.walk  gct.cpp
src/110_gauss_dof/coc_gauss/: h12_32.comp  v12_32.comp
src/111_splitted_gauss_dof/: CMakeLists.txt
src/111_splitted_gauss_dof/mix_ao/: mix_ao.comp
src/113_gauss_dof_with_k+buffer/: CMakeLists.txt
src/115_lrlf_dof/: CMakeLists.txt  gct.cpp
src/115_lrlf_dof/dof/: v0.comp
src/116_star_burst/: flare.walk  gct.cpp
src/116_star_burst/scripts/: generate_starburst.py
src/118_sslf/flare/: flare.comp
src/119_prtlf/: CMakeLists.txt
src/119_prtlf/mix_ao/: mix_ao.comp
src/119_prtlf/scripts/: generate_ghost.py  lens_profile_to_matrix.py
src/11_semaphore/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/120_motion_blur/: fan.walk  gct.cpp
src/12_timeline_semaphore/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/13_image/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/141_simple_mesh_shader1/: CMakeLists.txt
src/141_simple_mesh_shader1/geometry/: geometry.geom
src/14_sampler/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/152_parallel_meshlet_backface_culling/geometry/: geometry.mesh
src/153_parallel_meshlet_backface_culling3/geometry/: geometry.mesh
src/154_meshlet_frustum_culling/: CMakeLists.txt
src/155_lod/: gct.cpp
src/156_lod2/: gct.cpp
src/157_flat_terrain/terrain/: terrain.task
src/158_height_map_terrain/: gct.cpp
src/158_height_map_terrain/terrain/: terrain.task
src/15_graphics_pipeline/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/16_framebuffer/: gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/17_draw/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/18_present/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/19_acceleration_structure/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/20_ray_tracing_pipeline/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/21_shader_binding_table/: CMakeLists.txt  gct.cpp  vulkan.cpp  vulkan_hpp.cpp
src/25_gltf/: gct.cpp
src/25_gltf/shaders/: lighting.h  tangent.frag  tangent_bc.frag  tangent_bc_em.frag  tangent_bc_em_no.frag  tangent_bc_em_no_sh.frag  tangent_bc_em_sh.frag  tangent_bc_mr.frag  tangent_bc_mr_em.frag  tangent_bc_mr_em_no.frag  tangent_bc_mr_em_no_sh.frag  tangent_bc_mr_em_sh.frag  tangent_bc_mr_no.frag  tangent_bc_mr_no_sh.frag  tangent_bc_mr_oc.frag  tangent_bc_mr_oc_em.frag  tangent_bc_mr_oc_em_no.frag  tangent_bc_mr_oc_em_no_sh.frag  tangent_bc_mr_oc_em_sh.frag  tangent_bc_mr_oc_no.frag  tangent_bc_mr_oc_no_sh.frag  tangent_bc_mr_oc_sh.frag  tangent_bc_mr_sh.frag  tangent_bc_no.frag  tangent_bc_no_sh.frag  tangent_bc_oc.frag  tangent_bc_oc_em.frag  tangent_bc_oc_em_no.frag  tangent_bc_oc_em_no_sh.frag  tangent_bc_oc_em_sh.frag  tangent_bc_oc_no.frag  tangent_bc_oc_no_sh.frag  tangent_bc_oc_sh.frag  tangent_bc_sh.frag  tangent_em.frag  tangent_em_no.frag  tangent_em_no_sh.frag  tangent_em_sh.frag  tangent_mr.frag  tangent_mr_em.frag  (+57 more)
src/30_shadow_map/: CMakeLists.txt  gct.cpp
src/50_deffered/: CMakeLists.txt  gct.cpp
src/51_ssao/: CMakeLists.txt  gct.cpp
src/51_ssao/ao/: ssao.comp
src/52_ssdo/: CMakeLists.txt  gct.cpp
src/53_ssdo_with_bounce/: CMakeLists.txt  gct.cpp
src/53_ssdo_with_bounce/ao/: ssdo_with_bounce.comp
src/53_ssdo_with_bounce/mix_ao/: mix_ao.comp
src/54_hbao/: CMakeLists.txt  gct.cpp
src/54_hbao/ao/: hbao.comp
src/55_hbao_with_biased_horizon/: CMakeLists.txt  gct.cpp
src/56_hbao_with_distance_mask/: CMakeLists.txt  gct.cpp
src/56_hbao_with_distance_mask/geometry/: tangent.geom
src/57_vxao/: CMakeLists.txt  gct.cpp
src/57_vxao/selective_gauss2/: v12_32.comp
src/58_rtao/: CMakeLists.txt  gct.cpp
src/58_rtao/mix_ao/: mix_ao.comp
src/58_rtao/selective_gauss2/: vadaptive.comp
src/59_gi_diffuse/: CMakeLists.txt  gct.cpp
src/59_gi_diffuse/ssdgi/: ssdgi.comp
src/59_gi_diffuse/voxel/: world.frag
src/60_gi_specular/: CMakeLists.txt  gct.cpp
src/60_gi_specular/selective_gauss2/: vadaptive.comp
src/60_gi_specular/ssdgi/: ssdgi.comp
src/60_gi_specular/voxel/: world.frag
src/70_transparent_plane/: CMakeLists.txt
src/71_transparent_object/: CMakeLists.txt
src/72_traditional_fog/: CMakeLists.txt
src/73_ssls/: CMakeLists.txt
src/74_epipolar_sampling/: CMakeLists.txt
src/75_froxel_sampling/: CMakeLists.txt
src/75_froxel_sampling/generate_fog/: generate_fog.comp
src/76_froxel_sampling_with_shadow/: CMakeLists.txt
src/77_osm/: CMakeLists.txt  gct.cpp
src/78_fom/: CMakeLists.txt  gct.cpp
src/90_no_culling/: CMakeLists.txt
src/91_frustum_culling/: CMakeLists.txt  gct.cpp
src/92_portal_culling/: CMakeLists.txt  gct.cpp
src/92_portal_culling/mix_ao/: mix_ao.comp
src/93_chc/: CMakeLists.txt  gct.cpp
src/94_nohc/: CMakeLists.txt  gct.cpp
src/95_chcplus/: CMakeLists.txt  gct.cpp
src/96_roc/: CMakeLists.txt
src/97_hroc/: CMakeLists.txt  gct.cpp
src/98_radix_sort/: CMakeLists.txt  gct.cpp
src/99_onesweep/: CMakeLists.txt
(+6 files in other folders)
