add_executable( shadow
  gct.cpp
)
target_compile_definitions( shadow PRIVATE -DCMAKE_CURRENT_BINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}" )
target_compile_definitions( shadow PRIVATE -DCMAKE_CURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}" )

add_shader( shadow shadow_map/world.vert )
add_shader( shadow shadow_map/world.frag )

add_shader( shadow lighting/tangent.frag )
add_shader( shadow lighting/tangent.vert )
add_shader( shadow lighting/tangent_bc.frag )
add_shader( shadow lighting/tangent_bc_em.frag )
add_shader( shadow lighting/tangent_bc_em_no.frag )
add_shader( shadow lighting/tangent_bc_mr.frag )
add_shader( shadow lighting/tangent_bc_mr_em.frag )
add_shader( shadow lighting/tangent_bc_mr_em_no.frag )
add_shader( shadow lighting/tangent_bc_mr_no.frag )
add_shader( shadow lighting/tangent_bc_mr_oc.frag )
add_shader( shadow lighting/tangent_bc_mr_oc_em.frag )
add_shader( shadow lighting/tangent_bc_mr_oc_em_no.frag )
add_shader( shadow lighting/tangent_bc_mr_oc_no.frag )
add_shader( shadow lighting/tangent_bc_no.frag )
add_shader( shadow lighting/tangent_bc_oc.frag )
add_shader( shadow lighting/tangent_bc_oc_em.frag )
add_shader( shadow lighting/tangent_bc_oc_em_no.frag )
add_shader( shadow lighting/tangent_bc_oc_no.frag )
add_shader( shadow lighting/tangent_em.frag )
add_shader( shadow lighting/tangent_em_no.frag )
add_shader( shadow lighting/tangent_mr.frag )
add_shader( shadow lighting/tangent_mr_em.frag )
add_shader( shadow lighting/tangent_mr_em_no.frag )
add_shader( shadow lighting/tangent_mr_no.frag )
add_shader( shadow lighting/tangent_mr_oc.frag )
add_shader( shadow lighting/tangent_mr_oc_em.frag )
add_shader( shadow lighting/tangent_mr_oc_em_no.frag )
add_shader( shadow lighting/tangent_mr_oc_no.frag )
add_shader( shadow lighting/tangent_no.frag )
add_shader( shadow lighting/tangent_oc.frag )
add_shader( shadow lighting/tangent_oc_em.frag )
add_shader( shadow lighting/tangent_oc_em_no.frag )
add_shader( shadow lighting/tangent_oc_no.frag )
add_shader( shadow lighting/world.frag )
add_shader( shadow lighting/world.vert )
add_shader( shadow lighting/world_bc.frag )
add_shader( shadow lighting/world_bc_em.frag )
add_shader( shadow lighting/world_bc_mr.frag )
add_shader( shadow lighting/world_bc_mr_em.frag )
add_shader( shadow lighting/world_bc_mr_oc.frag )
add_shader( shadow lighting/world_bc_mr_oc_em.frag )
add_shader( shadow lighting/world_bc_oc.frag )
add_shader( shadow lighting/world_bc_oc_em.frag )
add_shader( shadow lighting/world_em.frag )
add_shader( shadow lighting/world_mr.frag )
add_shader( shadow lighting/world_mr_em.frag )
add_shader( shadow lighting/world_mr_oc.frag )
add_shader( shadow lighting/world_mr_oc_em.frag )
add_shader( shadow lighting/world_oc.frag )
add_shader( shadow lighting/world_oc_em.frag )

