add_executable( deffered
  gct.cpp
)
target_compile_definitions( deffered PRIVATE -DCMAKE_CURRENT_BINARY_DIR="${CMAKE_CURRENT_BINARY_DIR}" )
target_compile_definitions( deffered PRIVATE -DCMAKE_CURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}" )

add_shader( deffered shadow/world.vert )
add_shader( deffered shadow/world.frag )

add_shader( deffered geometry/tangent.frag )
add_shader( deffered geometry/tangent.vert )
add_shader( deffered geometry/tangent_bc.frag )
add_shader( deffered geometry/tangent_bc_em.frag )
add_shader( deffered geometry/tangent_bc_em_no.frag )
add_shader( deffered geometry/tangent_bc_mr.frag )
add_shader( deffered geometry/tangent_bc_mr_em.frag )
add_shader( deffered geometry/tangent_bc_mr_em_no.frag )
add_shader( deffered geometry/tangent_bc_mr_no.frag )
add_shader( deffered geometry/tangent_bc_mr_oc.frag )
add_shader( deffered geometry/tangent_bc_mr_oc_em.frag )
add_shader( deffered geometry/tangent_bc_mr_oc_em_no.frag )
add_shader( deffered geometry/tangent_bc_mr_oc_no.frag )
add_shader( deffered geometry/tangent_bc_no.frag )
add_shader( deffered geometry/tangent_bc_oc.frag )
add_shader( deffered geometry/tangent_bc_oc_em.frag )
add_shader( deffered geometry/tangent_bc_oc_em_no.frag )
add_shader( deffered geometry/tangent_bc_oc_no.frag )
add_shader( deffered geometry/tangent_em.frag )
add_shader( deffered geometry/tangent_em_no.frag )
add_shader( deffered geometry/tangent_mr.frag )
add_shader( deffered geometry/tangent_mr_em.frag )
add_shader( deffered geometry/tangent_mr_em_no.frag )
add_shader( deffered geometry/tangent_mr_no.frag )
add_shader( deffered geometry/tangent_mr_oc.frag )
add_shader( deffered geometry/tangent_mr_oc_em.frag )
add_shader( deffered geometry/tangent_mr_oc_em_no.frag )
add_shader( deffered geometry/tangent_mr_oc_no.frag )
add_shader( deffered geometry/tangent_no.frag )
add_shader( deffered geometry/tangent_oc.frag )
add_shader( deffered geometry/tangent_oc_em.frag )
add_shader( deffered geometry/tangent_oc_em_no.frag )
add_shader( deffered geometry/tangent_oc_no.frag )
add_shader( deffered geometry/world.frag )
add_shader( deffered geometry/world.vert )
add_shader( deffered geometry/world_bc.frag )
add_shader( deffered geometry/world_bc_em.frag )
add_shader( deffered geometry/world_bc_mr.frag )
add_shader( deffered geometry/world_bc_mr_em.frag )
add_shader( deffered geometry/world_bc_mr_oc.frag )
add_shader( deffered geometry/world_bc_mr_oc_em.frag )
add_shader( deffered geometry/world_bc_oc.frag )
add_shader( deffered geometry/world_bc_oc_em.frag )
add_shader( deffered geometry/world_em.frag )
add_shader( deffered geometry/world_mr.frag )
add_shader( deffered geometry/world_mr_em.frag )
add_shader( deffered geometry/world_mr_oc.frag )
add_shader( deffered geometry/world_mr_oc_em.frag )
add_shader( deffered geometry/world_oc.frag )
add_shader( deffered geometry/world_oc_em.frag )

add_shader( deffered gauss/h12_32.comp )
add_shader( deffered gauss/v12_32.comp )

add_shader( deffered lighting/lighting.comp )
add_shader( deffered gamma/gamma.comp )

add_shader( deffered mix_ao/mix_ao.comp )

add_shader( deffered tone/tone.comp )
